# touchstone

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cspell.json  mkdocs.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: index.md  touchstone-vs-world.md  usage.md
docs/reference/: touchstone.algorithms.md
tests/: utilities.py
tests/algorithms/: test_bernstein_vazirani.py  test_deutsch_jozsa.py  test_ghz.py  test_grover.py  test_one_hot_iqft.py  test_one_hot_qft.py  test_phase_estimation.py  test_ripple_carry_adder.py  test_swap_test.py  test_w_state.py
tests/metadata/: test_filtering.py
touchstone/: __init__.py
touchstone/algorithms/: __init__.py  base_algorithm.py  bernstein_vazirani.py  deutsch_jozsa.py  ghz.py  grover.py  one_hot_iqft.py  one_hot_qft.py  phase_estimation.py  ripple_carry_adder.py  swap_test.py  w_state.py
touchstone/metadata/: fitering.py  tags.py
