[tool.poetry]
name = "quantum-touchstone"
version = "0.1.0"
description = "Canonical quantum benchmark circuits and algorithms"
authors = ["Adam Winick <adam.winick@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "touchstone" }]

[tool.poetry.dependencies]
python = ">=3.11,<4"
qiskit = "^1.4"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
mypy = "^1.14.1"
ruff = "^0.11.7"
black = "^24.10.0"
pytest = "^8.3.4"
coverage = "^7.8.0"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.coverage.run]
branch = true
source = ["touchstone"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover"
]

[tool.mypy]
no_implicit_optional = true
show_error_codes = true
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
namespace_packages = true
disallow_untyped_defs = true
explicit_package_bases = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:The property ``qiskit.dagcircuit.dagcircuit.DAGCircuit.duration`` is deprecated as of qiskit 1.3.0*:DeprecationWarning",
    "ignore:The property ``qiskit.dagcircuit.dagcircuit.DAGCircuit.unit`` is deprecated as of qiskit 1.3.0*:DeprecationWarning"
]
