[tool.poetry]
name = "quantum-touchstone"
version = "0.1.0"
description = "Canonical quantum benchmark circuits and algorithms"
authors = ["Adam Winick <adam.winick@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "touchstone" }]

[tool.poetry.dependencies]
python = ">=3.11,<4"
qiskit = "^1.4"
numpy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
mypy = "^1.14.1"
ruff = "^0.11.7"
black = "^24.10.0"
pytest = "^8.3.4"
coverage = "^7.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.12"
pymdown-extensions = "^10.14.3"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.10"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "D",    # pydocstyle (for missing docstrings)
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "C90",  # mccabe (complexity)
    "B",    # bugbear (smart linting, better warnings)
    "C4",   # flake8-comprehensions (catch dumb for-loop errors)
    "RET",  # flake8-return (clean returns)
    "RSE",  # flake8-raise (correct raise patterns)
    "ARG",   # Unused function arguments
    "Q",     # Quote styles (consistent use of ' or ")
    "I",     # Import sorting (ruff built-in isort)
    "NPY",   # numpy specific rules (harmless, clean)
    "SIM",  # code simplifications
    "PERF", # performance anti-patterns
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
branch = true
source = ["touchstone"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover"
]

[tool.mypy]
no_implicit_optional = true
show_error_codes = true
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
namespace_packages = true
disallow_untyped_defs = true
explicit_package_bases = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:The property ``qiskit.dagcircuit.dagcircuit.DAGCircuit.duration`` is deprecated as of qiskit 1.3.0*:DeprecationWarning",
    "ignore:The property ``qiskit.dagcircuit.dagcircuit.DAGCircuit.unit`` is deprecated as of qiskit 1.3.0*:DeprecationWarning"
]
